Add JS for subscribing to and receiving push notifications

--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -231,6 +231,8 @@ en:
       share:
         heading: "Share"
         button: "Share on %{service}"
+    push_settings:
+      description: "Want to receive push notifications for new questions on your device?"
   layouts:
     feedback:
       heading: "Feedback"
