--- a/config/locales/frontend.en.yml
+++ b/config/locales/frontend.en.yml
@@ -49,6 +49,15 @@ en:
       confirm:
         title: "Are you sure?"
         text: "This will mute this user for everyone."
+    push_notifications:
+      subscribe:
+        success:
+          title: Push notifications enabled!
+          body: You will now receive push notifications for new questions on this device.
+        fail:
+          title: Failed to subscribe to push notifications
+          body: Please try again later
+      setup_fail: Failed to set up push notifications. Please try again later.
     report:
       confirm:
         title: "Are you sure you want to report this %{type}?"
