Remove sidebar from timeline layout

--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -511,10 +511,6 @@ en:
     anonymous_block:
       deleted_question: "Deleted question"
       blocked: "blocked %{time} ago"
-    sidebar:
-      list:
-        title: "Members"
-        none: "No members yet."
   tabs:
     feed:
       public: "Public"
@@ -531,6 +527,9 @@ en:
             Once you have done that, the lists will be shown here.
             When you select a list you'll get a timeline view of all users within that list.
           </p>
+        members:
+          title: "Members"
+          none: "No members yet."
     moderation:
       all: "All reports"
       answers: :activerecord.models.answer.other
