Add locales for user requirement setting and views

--- a/config/locales/errors.en.yml
+++ b/config/locales/errors.en.yml
@@ -33,3 +33,5 @@ en:
     invalid_parameter: "Invalid parameter"
 
     record_not_found: "Record not found"
+
+    login_required: "You need to be logged in to perform this action"
