--- a/config/locales/activerecord.en.yml
+++ b/config/locales/activerecord.en.yml
@@ -68,6 +68,7 @@ en:
         password: "Password"
         password_confirmation: "Confirm your password"
         privacy_allow_anonymous_questions: "Allow anonymous questions"
+        privacy_require_user: "Require users to be logged in to ask you questions"
         privacy_allow_public_timeline: "Show your answers in the public timeline"
         privacy_allow_stranger_answers: "Allow other people to answer your questions"
         profile_picture: "Profile picture"
