--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -327,6 +327,10 @@ en:
           link_text: "their answer"
         other:
           link_text_html: "%{user}'s answer"
+      dataexport:
+        heading: "Your data export is ready"
+        text_html: "Head over to %{settings_export} to download it."
+        settings_export: "the settings page"
       reaction:
         heading_html: "%{user} smiled %{type} %{time} ago"
         answer:
@@ -396,7 +400,7 @@ en:
           <p>The data is inside a <code>.zip</code> archive that contains some JSON files.
           The archive also contains a copy of your profile picture and header picture in all sizes.</p>
           <p>Please note that you can only export your data once a week. Exporting your data
-          will take a while, so please be patient. You will receive a question once exporting
+          will take a while, so please be patient. You will receive a notification once exporting
           is done.</p>
         export: "Export"
         export_url:
