Apply review suggestion from @raccube
Co-authored-by: Karina Kwiatek <6197148+raccube@users.noreply.github.com>

--- a/config/locales/voc.en.yml
+++ b/config/locales/voc.en.yml
@@ -28,7 +28,7 @@ en:
     "y": "Yes"
     "n": "No"
     members:
-      zero: "0 members"
+      zero: "No members"
       one: "1 member"
       other: "%{count} members"
   messages:
