Add mute action support in user action handler

--- a/config/locales/voc.en.yml
+++ b/config/locales/voc.en.yml
@@ -13,6 +13,7 @@ en:
     load: "Load more"
     login: "Sign in"
     logout: "Sign out"
+    mute: "Mute"
     save: "Save changes"
     show_anonymous_questions: "Show all questions from this user"
     subscribe: "Subscribe"
@@ -23,6 +24,7 @@ en:
     terms: "Terms of Service"
     unblock: "Unblock"
     unfollow: "Unfollow"
+    unmute: "Unmute"
     update: "Update"
     view_in_rails_admin: "View in Rails Admin"
     "y": "Yes"
