--- a/config/locales/controllers.en.yml
+++ b/config/locales/controllers.en.yml
@@ -107,6 +107,9 @@ en:
         follow:
           success: "Successfully followed user."
           error: "You are already following that user."
+        mute:
+          success: "Successfully muted user."
+          error: "You are already muting that user."
       destroy:
         block:
           success: "Successfully unblocked user."
@@ -114,6 +117,9 @@ en:
         follow:
           success: "Successfully unfollowed user."
           error: "You are not following that user."
+        mute:
+          success: "Successfully unmuted user."
+          error: "You are not muting that user."
     report:
       create:
         noauth: :ajax.noauth
