Add UI to manage muted users

--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -421,10 +421,15 @@ en:
           present: "Here's your export from %{time}"
     mutes:
       index:
-        title: "Muted Terms"
-        heading: "Muted Terms"
-        body: "Muting words (or longer phrases) will prevent questions containing those to appear in your inbox."
-        note: "Note: Filtered questions are discarded completely from your inbox, and won't reappear if you remove a filter later on."
+        title: "Mutes"
+        users:
+          heading: "Muted Users"
+          body: "Muting users will prevent their questions from showing up in your inbox. Additionally, any interaction from them will not generate a notification for you."
+          none: "You are not muting anyone."
+        terms:
+          heading: "Muted Terms"
+          body: "Muting words (or longer phrases) will prevent questions containing those to appear in your inbox."
+          note: "Note: Filtered questions are discarded completely from your inbox, and won't reappear if you remove a filter later on."
       form:
         placeholder: "Add a new muted term…"
     privacy:
