Rename "Muted Terms" settings tab to "Mutes"

--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -584,7 +584,7 @@ en:
       privacy: "Privacy"
       sharing: "Sharing"
       security: "Security"
-      mutes: "Muted Terms"
+      mutes: "Mutes"
       theme: "Theme"
       data: "Your Data"
       export: "Export"
