--- a/config/locales/controllers.en.yml
+++ b/config/locales/controllers.en.yml
@@ -189,7 +189,7 @@ en:
     two_factor_authentication:
       otp_authentication:
         update:
-          error: :errors.invalid_otp
+          error: "The code entered was invalid. Please check the system time on your device."
         destroy:
           success: "Two factor authentication has been disabled for your account."
   user:
@@ -201,7 +201,7 @@ en:
         info:
           one: "You have only one recovery code remaining. Please regenerate your recovery codes from the security settings to avoid being locked out!"
           other: "You have %{count} recovery codes remaining."
-        error: :errors.invalid_otp
+        error: "The code entered was invalid."
     registrations:
       destroy:
         export_pending: "You may not delete your account while account data is currently being exported."
