--- a/config/locales/voc.en.yml
+++ b/config/locales/voc.en.yml
@@ -10,6 +10,7 @@ en:
     delete: "Delete"
     edit: "Edit"
     follow: "Follow"
+    format_markdown: "Styling with Markdown is supported"
     load: "Load more"
     login: "Sign in"
     logout: "Sign out"
