Add format hint for screen_name input

--- a/config/locales/activerecord.en.yml
+++ b/config/locales/activerecord.en.yml
@@ -82,6 +82,7 @@ en:
         updated_at: "Account updated at"
     help:
       user:
+        screen_name: "Alphanumerical and underscores allowed, max. 16 characters"
         email: "Don't forget to check your spam folder in case our email might have landed there!"
         current_password: "We need your current password to confirm your changes"
       profile:
