Add raised-text and raised-accent-text theme variables

--- a/config/locales/activerecord.en.yml
+++ b/config/locales/activerecord.en.yml
@@ -49,7 +49,9 @@ en:
         primary_color: "Primary colour"
         primary_text: "Primary text colour"
         raised_accent: "Raised accent colour"
+        raised_accent_text: "Raised accent text colour"
         raised_background: "Raised background colour"
+        raised_text: "Raised text colour"
         success_color: "Success colour"
         success_text: "Success text colour"
         warning_color: "Warning colour"
