--- a/config/locales/activerecord.en.yml
+++ b/config/locales/activerecord.en.yml
@@ -74,6 +74,9 @@ en:
         privacy_allow_stranger_answers: "Allow other people to answer your questions"
         privacy_noindex: "Prevent search engines from indexing your profile"
         privacy_hide_social_graph: "Hide your social graph from others"
+        sharing_enabled: "Enable sharing"
+        sharing_autoclose: "Automatically close inbox entry after sharing once"
+        sharing_custom_url: "Custom Share Link"
         profile_picture: "Profile picture"
         profile_header: "Profile header"
         sign_in_count: "Sign in count"
@@ -85,6 +88,9 @@ en:
         screen_name: "Alphanumerical and underscores allowed, max. 16 characters"
         email: "Don't forget to check your spam folder in case our email might have landed there!"
         current_password: "We need your current password to confirm your changes"
+        sharing_enabled: "Shows a sharing dialog after answering a question from your inbox"
+        sharing_autoclose: "Use this if you mainly post to a single service"
+        sharing_custom_url: "Example: https://mastodon.social/share?text="
       profile:
         anon_display_name: "This name will be used for questions asked to you by anonymous users."
         motivation_header: "Shown in the header of the question box on your profile. Motivate users to ask you questions!"
