Apply review suggestion from @nilsding
Co-authored-by: Georg Gadinger <nilsding@nilsding.org>

--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -216,7 +216,7 @@ en:
       sharing:
         heading: "Share answer on..."
         post_to: "Post to %{service}"
-        hint_html: "You can customize sharing in your %{settings}"
+        hint_html: "You can customise sharing in your %{settings}"
         settings: "settings"
     show:
       empty: "Nothing to see here."
