--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -73,10 +73,11 @@ en:
   actions:
     answer:
       return: "Return to Inbox"
-      pin: "Pin to Profile"
-      unpin: "Unpin from Profile"
     comment:
       view_smiles: "View comment smiles"
+    pin:
+      pin: "Pin to Profile"
+      unpin: "Unpin from Profile"
     share:
       twitter: "Share on Twitter"
       tumblr: "Share on Tumblr"
