make URI.parse part of the validation for the sharing URL
the regexp alone and web browsers allows URLs to contain non-ASCII
characters, which `URI.parse` does not like -- resulting in the inbox
page to suddenly break.

also changed the `redirect_to` in the controller to a `render :edit` so
that validation errors are shown properly

--- a/config/locales/activerecord.en.yml
+++ b/config/locales/activerecord.en.yml
@@ -104,6 +104,9 @@ en:
       user:
         screen_name:
           format: "contains invalid characters"
+    errors:
+      messages:
+        invalid_url: "does not look like a valid URL"
   helpers:
     submit:
       user:
