--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -579,7 +579,7 @@ en:
       deleted_question: "Deleted question"
       blocked: "blocked %{time} ago"
     question:
-      visible_to_you: "Only visible to you"
+      visible_to_you: "Only visible to you as it was asked directly"
       visible_mod_mode: "You can see this because you are in moderation view"
   tabs:
     admin:
