--- a/config/locales/controllers.en.yml
+++ b/config/locales/controllers.en.yml
@@ -212,3 +212,8 @@ en:
   timeline:
     public:
       title: "Public Timeline"
+  answer:
+    pin:
+      success: "This answer will now appear at the top of your profile."
+    unpin:
+      success: "This answer will no longer be pinned to the top of your profile."
