--- a/config/locales/voc.en.yml
+++ b/config/locales/voc.en.yml
@@ -17,6 +17,7 @@ en:
     mute: "Mute"
     save: "Save changes"
     show_anonymous_questions: "Show all questions from this user"
+    smile: "Smile"
     subscribe: "Subscribe"
     unsubscribe: "Unsubscribe"
     register: "Sign up"
