Add shortcut for viewing answer page

--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -594,6 +594,7 @@ en:
         view_comments: "View comments"
         comment: "Write a comment"
         all_answers: "View all answers"
+        view_answer: "View answer page"
       global:
         navigation:
           up: "Move selection up"
