--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -492,7 +492,7 @@ en:
             aegis: "Aegis Authenticator for Android"
             strongbox: "Strongbox Authenticator for iOS"
             microsoft: "Microsoft Authenticator"
-            iphone: "iPhone (Passwords/Camera)"
+            ios: "iOS (Passwords/Camera)"
           source:
             apple_support: "Apple Support"
             app_store: "App Store"
