--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -676,7 +676,7 @@ en:
     questions:
       header:
         title_html: "Viewing all questions from <br><abbr title=%{author_identifier}>%{short}</abbr>"
-      index:
+      show:
         title: "Questions from %{author_identifier}"
   user:
     show_follow:
