--- a/config/locales/controllers.en.yml
+++ b/config/locales/controllers.en.yml
@@ -107,19 +107,6 @@ en:
         unknown: "You can't report this entity."
         notfound: "Could not find %{parameter}"
         success: "%{parameter} reported.  A moderator will decide what happens with the %{parameter}."
-    smile:
-      create:
-        success: "Successfully smiled answer."
-        error: "You have already smiled that answer."
-      create_comment:
-        success: "Successfully smiled comment."
-        error: "You have already smiled that comment."
-      destroy:
-        success: "Successfully unsmiled answer."
-        error: "You have not smiled that answer."
-      destroy_comment:
-        success: "Successfully unsmiled comment."
-        error: "You have not smiled that comment."
     web_push:
       subscription_count:
         zero: "You are not currently subscribed to push notifications on any devices."
@@ -195,6 +182,21 @@ en:
     registrations:
       destroy:
         export_pending: "You may not delete your account while account data is currently being exported."
+  reactions:
+    create:
+      answer:
+        success: "Successfully smiled answer."
+        error: "You have already smiled that answer."
+      comment:
+        success: "Successfully smiled comment."
+        error: "You have already smiled that comment."
+    destroy:
+      answer:
+        success: "Successfully unsmiled answer."
+        error: "You have not smiled that answer."
+      comment:
+        success: "Successfully unsmiled comment."
+        error: "You have not smiled that comment."
   relationships:
     create:
       block:
